[gd_scene load_steps=10 format=4 uid="uid://darmtxon8g3j1"]

[ext_resource type="PackedScene" uid="uid://c768k0wr1rfje" path="res://Scenes/Game Locations/Location.tscn" id="1_t83g0"]
[ext_resource type="PackedScene" uid="uid://g1hkuvhh1s8w" path="res://Scenes/Area Transitioner/transitioner.tscn" id="2_rluvl"]
[ext_resource type="Script" uid="uid://pnm4f3lkccfl" path="res://Scenes/Game Locations/third_segment.gd" id="2_t6any"]
[ext_resource type="PackedScene" uid="uid://brs3m8nmbsumw" path="res://Scenes/Objects/minecart.tscn" id="3_klifi"]
[ext_resource type="Texture2D" uid="uid://bvnte6cmqauab" path="res://Assets/Used/SelfMade/Mushroom.png" id="5_kwhwn"]
[ext_resource type="Texture2D" uid="uid://dyjf2skes8v5t" path="res://Assets/Used/SelfMade/Books.png" id="5_xg2xt"]
[ext_resource type="Texture2D" uid="uid://1smehdvw3jih" path="res://Assets/Used/kenney_tiny-dungeon/Tiles/tile_0082.png" id="6_2ragn"]
[ext_resource type="PackedScene" uid="uid://y3xyb7611on0" path="res://Entities/DialogueTrigger/DialogueTrigger.tscn" id="8_unky4"]
[ext_resource type="PackedScene" uid="uid://cldnuq77km7yn" path="res://Entities/Puzzles/puzzle_trigger.tscn" id="9_bs6oh"]

[node name="Location2" instance=ExtResource("1_t83g0")]
script = ExtResource("2_t6any")

[node name="TileMapLayer Bottom" parent="." index="0"]
tile_map_data = PackedByteArray("AAD//wAAAAAAAAQAAAD/////AAAAAAQAAAD///7/AAABAAQAAAD//wEAAAAAAAQAAAD///3/AAACAAQAAAD//wIAAAABAAQAAAD//wMAAAADAAQAADD///v/AAACAAAAAAD//wQAAAACAAIAAAD+/wQAAAACAAIAAAAAAAQAAAACAAIAAAD8/wQAAAACAAIAAAD9/wQAAAACAAIAAAABAAQAAAACAAIAAAACAAQAAAACAAIAAAADAAQAAAACAAIAAAD7/wQAAAACAAIAAAAEAAQAAAACAAIAAAD6/wQAAAACAAIAAAAFAAQAAAACAAIAAAD5/wQAAAACAAIAAAAGAAQAAAACAAIAAAD4/wQAAAACAAIAAAAHAAQAAAACAAIAAAD3/wQAAAABAAIAAAAAAAMAAAACAAQAADAAAAIAAAAAAAQAAAAAAAEAAAABAAQAAAAAAAAAAAAAAAQAAAAAAP//AAABAAQAAAAAAP7/AAABAAQAAAAAAP3/AAADAAQAAAAAAPv/AAACAAAAAAAIAPz/AAADAAEAAAAIAPv/AAADAAAAAAAIAAQAAAADAAIAAAAIAAMAAAADAAEAAAAIAAIAAAADAAEAAAAIAAEAAAADAAEAAAAIAAAAAAADAAEAAAAIAP//AAADAAEAAAAIAP7/AAADAAEAAAAIAP3/AAADAAEAAAAFAPv/AAACAAAAAAAHAPv/AAACAAAAAAAGAPv/AAACAAAAAAAEAPv/AAACAAAAAAADAPv/AAACAAAAAAACAPv/AAACAAAAAAABAPv/AAACAAAAAAD+//v/AAACAAAAAAD9//v/AAACAAAAAAD8//v/AAACAAAAAAD7//v/AAACAAAAAAD6//v/AAACAAAAAAD5//v/AAACAAAAAAD4//v/AAACAAAAAAD3//v/AAABAAAAAAD8//r/AAAAAAEAAAACAPr/AAAAAAEAAAAFAPr/AAAAAAEAAAAGAPr/AAAAAAEAAAAEAPr/AAAAAAAAAAADAPr/AAAAAAAAAAABAPr/AAAAAAAAAAAAAPr/AAAAAAAAAAD///r/AAAAAAAAAAD+//r/AAAAAAAAAAD9//r/AAAAAAAAAAD7//r/AAAAAAAAAAD6//r/AAAAAAAAAAD5//r/AAAAAAAAAAD4//r/AAAAAAAAAAD3//r/AAAAAAEAAAAHAPr/AAAAAAAAAAAIAPr/AAAAAAAAAAD3//z/AAABAAEAAAD3//3/AAABAAEAAAD3//7/AAABAAEAAAD3////AAABAAEAAAD3/wAAAAABAAEAAAD3/wEAAAABAAEAAAD3/wIAAAABAAEAAAD3/wMAAAABAAEAAAD2/wAAAAAAAAAAAAD2/wEAAAAAAAEAAAD2/wIAAAAAAAIAAAD2//3/AAAAAAEAAAD2//7/AAAAAAIAAAD2////AAAAAAIAAAD2//z/AAAAAAIAAAD2/wMAAAAAAAAAAAD2/wQAAAAAAAEAAAD2/wUAAAAAAAIAAAD2//r/AAAAAAAAAAD2//v/AAAAAAEAAAAJAPr/AAAAAAAAAAAJAPv/AAAAAAEAAAAJAPz/AAAAAAAAAAAJAP3/AAAAAAEAAAAJAP7/AAAAAAIAAAAJAP//AAAAAAAAAAAJAAAAAAAAAAEAAAAJAAEAAAAAAAIAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAEAAAAJAAQAAAAAAAIAAAD+//7/AAABAAQAAAD+////AAABAAQAAAD+/wEAAAABAAQAAAD8/wAAAAABAAQAAAD9/wAAAAAAAAQAAAD8/wIAAAABAAQAAAD9/wIAAAABAAQAAAABAAIAAAAAAAQAAAACAAIAAAABAAQAAAABAAAAAAAAAAQAAAABAP7/AAAAAAQAAAACAP7/AAAAAAQAAAD6/wAAAAAAAAQAAAD6/wIAAAAAAAQAAAD7/wAAAAABAAQAAAD7/wIAAAABAAQAAAD8//7/AAABAAQAAAD8////AAAAAAQAAAD8/wEAAAAAAAQAAAD9//3/AAACAAQAAAD9//7/AAAAAAQAAAD9////AAABAAQAAAD9/wEAAAABAAQAAAD+//3/AAADAAQAAAD+/wAAAAABAAQAAAD+/wIAAAAAAAQAAAABAP//AAAAAAQAAAABAAEAAAAAAAQAAAACAP3/AAADAAQAAAACAP//AAABAAQAAAACAAEAAAABAAQAAAADAP3/AAACAAQAAAADAP7/AAABAAQAAAADAP//AAAAAAQAAAADAAEAAAAAAAQAAAADAAIAAAAAAAQAAAAEAP7/AAAAAAQAAAAEAAAAAAABAAQAAAAEAAIAAAABAAQAAAAFAP7/AAABAAQAAAAFAAIAAAAAAAQAAAABAP3/AAACAAQAAAD5/wAAAAAAAAQAAAD5/wIAAAAAAAQAAAD7//7/AAABAAQAAAD7////AAABAAQAAAD7/wEAAAAAAAQAAAD8//3/AAADAAQAAAD4/wEAAAADAAQAAGD4/wMAAAAEAAQAADD5/wEAAAABAAQAAAD5/wMAAAADAAQAADD6////AAAAAAQAAAD7/wMAAAADAAQAADD8/wMAAAACAAQAADD9/wMAAAADAAQAADD+/wMAAAACAAQAADACAAMAAAACAAQAADADAAMAAAADAAQAADAEAP//AAABAAQAAAAEAAMAAAACAAQAADAFAP//AAAAAAQAAAAFAAMAAAADAAQAADABAAMAAAADAAQAADAFAAAAAAAAAAQAAAAGAP//AAABAAQAAAAGAAEAAAABAAQAAAAGAAMAAAACAAQAADAHAP//AAACAAQAAFAHAAMAAAAEAAQAAFD5//7/AAAAAAQAAAD6//7/AAAAAAQAAAD5//3/AAACAAQAAAD6//3/AAADAAQAAAD7//3/AAACAAQAAAD4////AAADAAQAAGD5////AAABAAQAAAD6/wMAAAACAAQAADD4/wIAAAACAAQAAGD4/wAAAAACAAQAAGD4//3/AAAEAAQAAGD4//7/AAACAAQAAGAHAP3/AAAEAAQAAAAHAP7/AAADAAQAAFAHAAAAAAACAAQAAFAGAAAAAAABAAQAAAAGAAIAAAABAAQAAAAHAAEAAAACAAQAAFAHAAIAAAADAAQAAFAEAP3/AAADAAQAAAAFAP3/AAACAAQAAAAGAP3/AAADAAQAAAAGAP7/AAAAAAQAAAD6/wEAAAAAAAQAAAD4//z/AAAEAAMAAAD5//z/AAAEAAMAAAD6//z/AAAEAAMAAAD7//z/AAAEAAMAAAD8//z/AAAEAAMAAAD9//z/AAAEAAMAAAD+//z/AAAEAAMAAAD///z/AAAEAAMAAAAAAPz/AAAEAAMAAAABAPz/AAAEAAMAAAACAPz/AAAEAAMAAAADAPz/AAAEAAMAAAAEAPz/AAAEAAMAAAAFAPz/AAAEAAMAAAAGAPz/AAAEAAMAAAAHAPz/AAAEAAMAAAACAAAAAAABAAQAAAADAAAAAAAAAAQAAAAEAAEAAAAAAAQAAAAFAAEAAAABAAQAAAA=")

[node name="TileMapLayer Top" parent="." index="1"]
tile_map_data = PackedByteArray("AAD6/wIAAAAJAAYAAAD6/wEAAAAJAAYAAAD6/wAAAAAJAAYAAAD6////AAAJAAYAAAD6//7/AAAJAAYAAAD9//7/AAAJAAYAAAD9////AAAJAAYAAAD9/wAAAAAJAAYAAAD9/wEAAAAJAAYAAAD9/wIAAAAJAAYAAAAAAP7/AAAJAAYAAAAAAP//AAAJAAYAAAAAAAAAAAAJAAYAAAAAAAEAAAAJAAYAAAAAAAIAAAAJAAYAAAADAP7/AAAJAAYAAAADAP//AAAJAAYAAAADAAAAAAAJAAYAAAADAAEAAAAJAAYAAAADAAIAAAAJAAYAAAD6//3/AAAHAAUAAAD9//3/AAAHAAUAAAAAAP3/AAAHAAUAAAADAP3/AAAHAAUAAAD6/wMAAAAIAAUAAAD9/wMAAAAIAAUAAAAAAAMAAAAIAAUAAAADAAMAAAAIAAUAAAAFAP7/AAADAAcAAAAGAP7/AAAAAAYAAAD4//3/AAABAAoAAAD4//7/AAAFAAMAAAD5//3/AAAFAAMAAAD5//7/AAAFAAMAAAA=")

[node name="Transitioner" parent="." index="2" instance=ExtResource("2_rluvl")]
position = Vector2(103, 54)
path = "uid://0rw06igkybgv"

[node name="Minecart" parent="." index="3" instance=ExtResource("3_klifi")]
position = Vector2(-88, 0)
modus = 1
path = "uid://cyhlgofsp0wic"

[node name="Boeken" type="Sprite2D" parent="Minecart" index="2"]
position = Vector2(0, -3)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_xg2xt")

[node name="Minecart2" parent="." index="4" instance=ExtResource("3_klifi")]
position = Vector2(-40, 0)
minecart = "mc_2"
path = "uid://c00yx6utxtpbn"

[node name="Barrel" type="Sprite2D" parent="Minecart2" index="2"]
position = Vector2(2.38419e-07, -3)
scale = Vector2(0.429688, 0.421875)
texture = ExtResource("6_2ragn")

[node name="Minecart3" parent="." index="5" instance=ExtResource("3_klifi")]
position = Vector2(8, 0)
modus = 4
minecart = "mc_3"
path = "uid://uiba8eb1wps8"

[node name="Puzzle Answer" type="Sprite2D" parent="Minecart3" index="2"]
position = Vector2(0, -2)
scale = Vector2(0.05, 0.05)

[node name="Minecart4" parent="." index="6" instance=ExtResource("3_klifi")]
position = Vector2(56, 0)
modus = 2
minecart = "mc_4"
path = "uid://bsdo6ftwnikkx"

[node name="Chests" type="Sprite2D" parent="Minecart4" index="2"]
position = Vector2(-1.19209e-07, -3)
scale = Vector2(0.75, 0.785714)
texture = ExtResource("5_kwhwn")

[node name="Dwarf" parent="." index="7" instance=ExtResource("8_unky4")]
position = Vector2(88, -23)
path = "uid://caosrbpvenegy"

[node name="Spook" parent="." index="8" instance=ExtResource("8_unky4")]
position = Vector2(-120, -39)
path = "uid://bkykv8gadwa7v"

[node name="Test Completion" type="Timer" parent="." index="9"]
wait_time = 2.0
one_shot = true

[node name="NPC" parent="." index="10" instance=ExtResource("9_bs6oh")]
position = Vector2(-208, 3)
min_score = 60
timer_duration = 420
penalty = 60

[connection signal="timeout" from="Test Completion" to="." method="_on_test_completion_timeout"]
